--- a/app/src/main/res/layout/activity_list_restaurante.xml
+++ b/app/src/main/res/layout/activity_list_restaurante.xml
@@ -6,20 +6,36 @@
     android:layout_height="match_parent"
     tools:context="com.example.Lists.ListRestaurante">
 
+    <ImageButton
+        android:id="@+id/backBtn"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/ic_back"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/app_name"
+        app:tint="@color/black"
+        android:backgroundTint="@android:color/transparent" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:text="Lista de restaurantes"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="20dp"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="Lista de Restaurantes"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
+        app:layout_constraintStart_toEndOf="@+id/backBtn"
+        app:layout_constraintTop_toTopOf="@+id/backBtn" />
 
     <ListView
         android:id="@+id/list_restaurantes"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -31,5 +47,10 @@
         android:layout_marginEnd="10dp"
         android:text="NUEVO"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_restaurantes" />
+        app:layout_constraintTop_toBottomOf="@+id/list_restaurantes"
+        android:background="@drawable/sign_up_ripple"
+        android:fontFamily="@font/open_sans_semibold"
+        android:textColor="#fff"
+        android:textSize="15sp"
+        android:textStyle="bold"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
