añadido ticket list, item, activity, adapter, activitylist

--- a/app/src/main/res/layout/fragment_profesional.xml
+++ b/app/src/main/res/layout/fragment_profesional.xml
@@ -54,6 +54,12 @@
             android:layout_height="wrap_content"
             android:text="GESTIÓN DE COMANDAS" />
 
+        <Button
+            android:id="@+id/btnTickets"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TICKETS" />
+
         <ImageView
             android:id="@+id/imageQR"
             android:layout_width="match_parent"
