--- a/app/src/main/res/layout/activity_list_tickets.xml
+++ b/app/src/main/res/layout/activity_list_tickets.xml
@@ -36,7 +36,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="NUEVO" />
+            android:text="NUEVO TICKET" />
 
     </RelativeLayout>
 
