--- a/app/src/main/res/layout/activity_form_ticket.xml
+++ b/app/src/main/res/layout/activity_form_ticket.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:fontFamily="@font/open_sans_bold"
-        android:text="Atrás"
+        android:text="Nuevo Ticket"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/backBtn"
@@ -109,8 +109,6 @@
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             tools:srcCompat="@tools:sample/avatars" />
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
