--- a/app/src/main/res/layout/tickets.xml
+++ b/app/src/main/res/layout/tickets.xml
@@ -52,7 +52,7 @@
                 <ListView
                     android:id="@+id/linea"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="265dp" />
             </LinearLayout>
         </LinearLayout>
 
