--- a/app/src/main/res/layout/activity_form_ticket.xml
+++ b/app/src/main/res/layout/activity_form_ticket.xml
@@ -91,8 +91,8 @@
             android:textColor="@color/black"
             android:textSize="16sp"/>
 
-        <!--<ListView
-            android:id="@+id/lvLineaTicket"
+        <ListView
+            android:id="@+id/listaMesas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -101,7 +101,6 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/backBtn" />
-        ESTO CREO QUE NO HACE FALTA-->
 
         <ImageView
             android:id="@+id/imageQR"
