--- a/app/src/main/res/layout/activity_list_tickets.xml
+++ b/app/src/main/res/layout/activity_list_tickets.xml
@@ -53,7 +53,7 @@
             android:layout_below="@+id/listTickets"
             android:layout_alignParentRight="true"
             android:layout_marginTop="20dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginStart="20dp"
             android:text="NUEVO TICKET" />
         <ListView
             android:id="@+id/listTickets"
