--- a/app/src/main/res/layout/item_linea_ticket.xml
+++ b/app/src/main/res/layout/item_linea_ticket.xml
@@ -26,6 +26,8 @@
             android:textSize="22dp"
             android:text="Producto" />
 
+
+
         <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -67,6 +69,20 @@
         android:background="@drawable/ic_mas"/>
 
         </LinearLayout>
+
+        <!-- POR SI QUEREMOS METER EL PRECIO
+                <TextView
+            android:id="@+id/tvPrecio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:textSize="22dp"
+            android:text="Precio" />
+        -->
+
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
