--- a/app/src/main/res/layout/activity_carta_cliente.xml
+++ b/app/src/main/res/layout/activity_carta_cliente.xml
@@ -60,11 +60,12 @@
 
     <ImageButton
         android:id="@+id/btnFiltrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline2"
-        app:srcCompat="@drawable/lupa50" />
+        android:layout_marginTop="9dp"
+        app:srcCompat="@drawable/lupa" />
 
     <LinearLayout
         android:id="@+id/linearLayout3"
