--- a/app/src/main/res/layout/activity_form_ticket.xml
+++ b/app/src/main/res/layout/activity_form_ticket.xml
@@ -79,7 +79,6 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/backBtn" />
 
-
         <Spinner
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:id="@+id/spMesa"
@@ -102,13 +101,6 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/backBtn" />
 
-        <ImageView
-            android:id="@+id/imageQR"
-            android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_height="wrap_content"
-            tools:srcCompat="@tools:sample/avatars" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -125,7 +117,7 @@
                 android:background="@drawable/delete_ripple"
                 android:backgroundTint="@color/green"
                 android:fontFamily="@font/open_sans_semibold"
-                android:text="GUARDAR"
+                android:text="CREAR"
                 android:textAllCaps="false"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -141,24 +133,6 @@
             android:layout_marginTop="10dp"
             android:gravity="right"
             android:orientation="horizontal">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnBorrar"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:background="@drawable/delete_ripple"
-                android:backgroundTint="@color/red"
-                android:fontFamily="@font/open_sans_semibold"
-                android:text="BORRAR"
-                android:textAllCaps="false"
-                android:textColor="#fff"
-                android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintVertical_bias="0.3" />
 
         </LinearLayout>
 
