--- a/app/src/main/res/layout/activity_form_admin.xml
+++ b/app/src/main/res/layout/activity_form_admin.xml
@@ -55,7 +55,7 @@
             android:id="@+id/btnRegistro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="PERSONAL" />
+            android:text="GESTION DE PERSONAL" />
 
         <Button
             android:id="@+id/btnGestionComandas"
