--- a/app/src/main/res/layout/activity_ticket_admin.xml
+++ b/app/src/main/res/layout/activity_ticket_admin.xml
@@ -94,19 +94,30 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
-            android:text="Mostrar QR"
+            android:text="QR"
             app:layout_constraintStart_toEndOf="@id/guidelinev2"
             app:layout_constraintTop_toBottomOf="@id/guideline2" />
 
         <Button
-            android:id="@+id/finTicket"
+            android:id="@+id/btnFinTicket"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:text="Finalizar Ticket"
+            android:text="Finalizar"
             app:layout_constraintStart_toEndOf="@id/guidelinev2"
             app:layout_constraintTop_toBottomOf="@id/guideline2" />
+
+        <Button
+            android:id="@+id/btnGuardar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:text="Guardar"
+            app:layout_constraintStart_toEndOf="@id/guidelinev2" />
+
+
     </LinearLayout>
 
 
